<resources>
    <string name="app_name">Iridium</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="bugs">Report Bugs</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="comm">Communicate</string>
    <string name="share">Share Current Page</string>
    <string name="contributors">Contributors:</string>
    <string name="about">About App</string>
    <string name="feedback">Comments or Suggestions?</string>
    <string name="devBy">Developed by:</string>
    <string name="rp">Robert Pelger (SaguraKirux)</string>
    <string name="logoImg">Icon by:</string>
    <string name="actions">Actions</string>
    <string name="root_town">Root Town</string>
    <string name="navigate">Navigate</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="feed">News Feed</string>
    <string name="forums">Iridium Based Forums</string>
    <string name="new_posts">New Posts</string>
    <string name="shoutbox">Shoutbox</string>
    <string name="pop_content">Popular Content</string>
    <string name="inbox">Inbox</string>
    <string name="alerts">Alerts</string>
    <string name="my_account">My Account</string>
    <string name="iridium_news">Iridium News</string>
    <string name="announcements">Announcements</string>
    <string name="progress">Progress Updates</string>
    <string name="dev_blog">Developer Blog</string>
    <string name="the_world">[The World]</string>
    <string name="message_board">[The World] Message Board</string>
    <string name="bug_reports">[The World] Bug Reports</string>
    <string name="staff">Staff</string>
    <string name="team_info">Team Info</string>
    <string name="dev_info">Development Information</string>
    <string name="offline_chat">Offline Chat</string>
    <string name="aqua">Aqua Polis Square</string>
    <string name="events">Events</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="multimedia">Multimedia</string>
    <string name="role_play">Role Play</string>
    <string name="lost_grounds">Lost Grounds</string>
    <string name="ooc">Out-of-Character</string>


</resources>
