<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Navigate">
        <menu>
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="Import" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Gallery" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Slideshow" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools" />
        </menu>
    </item>

    <item android:title="@string/comm">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
            <item
                android:id="@+id/bugs"
                android:icon="@drawable/ic_action_bug"
                android:title="@string/bugs" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_action_info"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>
